# ai-research-graph

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/routes/: documents.py  graph.py  health.py  query.py
backend/app/core/: logging.py  redis.py
backend/app/db/: models.py  session.py
backend/app/graph/: builder.py
backend/app/rag/: embeddings.py  pipeline.py  vector_store.py
backend/app/schemas/: dto.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_embeddings.py  test_health.py  test_splitter.py
docs/: api.md  architecture.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/components/: GraphView.tsx  IngestPanel.tsx  QueryPanel.tsx
frontend/src/lib/: api.ts
infra/aws/: README.md
